Add index.html with headings, paragraphs, and clickable image

--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>My Portfolio</title>
-</head>
-<body>
-  <h1>Welcome to My Portfolio</h1>    <!-- h1 -->
-  <h2>About Me</h2>                    <!-- h2 -->
-  <p>I am learning web development and building projects to sharpen my skills.</p> <!-- para 1 -->
-  <p>I enjoy coding, problem-solving, and collaborating on meaningful projects.</p>   <!-- para 2 -->
-  <h3>Current Projects</h3>            <!-- h3 -->
-  <p>This page is a practice project demonstrating HTML structure and semantics.</p> <!-- para 3 -->
-  <p>I plan to add more pages and examples in the near future.</p>                 <!-- para 4 -->
+<h1>Main Title</h1>
+<h2>Subheading Level 2</h2>
+<h3>Subheading Level 3</h3>
 
-  <!-- Clickable image linking to ALX (change the href/src if you wish) -->
-  <a href="https://www.alxafrica.com/" target="_blank" rel="noopener noreferrer">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-  </a>
-</body>
-</html>
+<p>This is the first paragraph of my page.</p>
+<p>This is the second paragraph, giving more details.</p>
+<p>This is the third paragraph, with extra information.</p>
+<p>This is the fourth paragraph, wrapping up the content.</p>
+
+<a href="https://www.alxafrica.com" target="_blank">
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable ALX Logo">
+</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
