--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<h1>Main Title</h1>
-<h2>Subheading Level 2</h2>
-<h3>Subheading Level 3</h3>
-
-<p>This is the first paragraph of my page.</p>
-<p>This is the second paragraph, giving more details.</p>
-<p>This is the third paragraph, with extra information.</p>
-<p>This is the fourth paragraph, wrapping up the content.</p>
-
-<a href="https://www.alxafrica.com" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable ALX Logo">
-</a>
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My First Webpage</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+  <h1>Welcome to My First Portfolio</h1>
+  <h2>Exploring HTML Basics</h2>
+  <h3>About This Page</h3>
+
+  <p>This is the first paragraph. It introduces who I am and what my portfolio is about. I’m learning HTML step by step.</p>
+  <p>This is the second paragraph. It describes the kind of projects I plan to build and share on this site.</p>
+  <p>This is the third paragraph. Here, I might explain my skills, interests, or goals for the future.</p>
+  <p>This is the fourth paragraph. I invite you to explore my work and connect with me.</p>
+
+  <a href="https://example.com" target="_blank">
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="max-width:200px;">
+  </a>
 </body>
 </html>
