--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>My First Portfolio</title>
 </head>
 <body>
-  <h1>Welcome to My First Portfolio</h1>
+  <!-- Test change to force commit -->
+<h1>Welcome to My First Portfolio</h1>
   <h2>Exploring HTML Basics</h2>
   <h3>About This Page</h3>
 
