Add index.html with headings, paragraphs, and clickable image

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,6 +5,22 @@
   <title>My First Portfolio</title>
 </head>
 <body>
+<h1>Welcome to My First Portfolio</h1>
+<p>This is the first paragraph introducing my portfolio page.</p>
+
+<h2>About Me</h2>
+<p>This is the second paragraph, where I talk a bit about myself and my goals.</p>
+
+<h3>My Hobbies</h3>
+<p>This is the third paragraph, listing the hobbies and interests I enjoy the most.</p>
+
+<h3>Contact Information</h3>
+<p>This is the fourth paragraph with ways to reach me.</p>
+
+<a href="https://www.example.com" target="_blank">
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Logo" width="200">
+</a>
+
   <h1>Welcome to my portfolio</h1>
   <p>This is my base index page.</p>
 </body>
