Add tweets.html with embedded tweet and link between index.html and tweets.html

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -23,5 +23,7 @@
 
   <h1>Welcome to my portfolio</h1>
   <p>This is my base index page.</p>
+<p><a href="tweets.html">See My Tweets</a></p>
+
 </body>
 </html>
