Add consistent structure with header, main/article/aside, and footer

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,25 +5,35 @@
   <title>My First Portfolio</title>
 </head>
 <body>
-<h1>Welcome to My First Portfolio</h1>
-<p>This is the first paragraph introducing my portfolio page.</p>
+<body>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-<h2>About Me</h2>
-<p>This is the second paragraph, where I talk a bit about myself and my goals.</p>
+    <main>
+        <article>
+            <h1>Welcome to My Homepage</h1>
+            <p>This is my first paragraph.</p>
+            <p>This is my second paragraph.</p>
+            <p>This is my third paragraph.</p>
+            <p>This is my fourth paragraph.</p>
+            <h2>About This Site</h2>
+            <h3>Getting Started</h3>
+            <a href="https://example.com" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable ALX Logo">
+            </a>
+        </article>
 
-<h3>My Hobbies</h3>
-<p>This is the third paragraph, listing the hobbies and interests I enjoy the most.</p>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-<h3>Contact Information</h3>
-<p>This is the fourth paragraph with ways to reach me.</p>
-
-<a href="https://www.example.com" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable Logo" width="200">
-</a>
-
-  <h1>Welcome to my portfolio</h1>
-  <p>This is my base index page.</p>
-<p><a href="tweets.html">See My Tweets</a></p>
-
+    <footer>
+        <p>Made by Norman Ayaga - <a href="https://example.com" target="_blank">here</a></p>
+    </footer>
 </body>
-</html>
+
