--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,19 +5,32 @@
   <title>My First Portfolio</title>
 </head>
 <body>
-<h1>My Tweets</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-<!-- Embedded Tweet -->
-<blockquote class="twitter-tweet">
-    <p lang="en" dir="ltr">Hello world! This is my embedded tweet.</p>&mdash; YourName
-    (<a href="https://twitter.com/TwitterDev/status/560070183650213889?ref_src=twsrc%5Etfw">January 27, 2015</a>)
-</blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <main>
+        <article>
+            <h1>My Tweets</h1>
 
-<!-- Link back to homepage -->
-<p><a href="index.html">Back to Homepage</a></p>
+            <!-- Embedded Tweet -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Hello world! This is my embedded tweet.</p>&mdash; YourName
+                (<a href="https://twitter.com/TwitterDev/status/560070183650213889?ref_src=twsrc%5Etfw">January 27, 2015</a>)
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
 
-  <h1>Welcome to my portfolio</h1>
-  <p>This is my base index page.</p>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Norman Ayaga - <a href="https://example.com" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
